--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,29 +20,34 @@ resolver = "1" # Hack to enable the `custom` feature of `getrandom`
 [dependencies]
 aead = { version = "0.5.2", default-features = false }
 aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
+chacha20 = { version = "0.9.1", default-features = false }
 chacha20poly1305 = { version = "0.10.1", default-features = false }
 crypto-common = { version = "0.1.6", default-features = false }
 der = { version = "0.7.9", default-features = false }
 digest = { version = "0.10.7", default-features = false }
-ecdsa = { version = "0.16.8", default-features = false, features = ["alloc"] }
+ecdsa = { version = "0.16.9", default-features = false, features = ["alloc"] }
 ed25519-dalek = { version = "2", default-features = false, features = ["pkcs8"] }
 hmac = { version = "0.12.1", default-features = false }
 p256 = { version = "0.13.2", default-features = false, features = ["pem", "ecdsa", "ecdh"] }
 p384 = { version = "0.13.0", default-features = false, features = ["pem", "ecdsa", "ecdh"] }
-paste = { version = "1.0.14", default-features = false }
+paste = { version = "1.0.15", default-features = false }
 pkcs8 = { version = "0.10.2", default-features = false, features = ["pem", "pkcs5"] }
-pki-types = { package = "rustls-pki-types", version = "1.0.1", default-features = false }
+pki-types = { package = "rustls-pki-types", version = "1.8.0", default-features = false }
+quinn = { version = "0.11.5", default-features = false, features = ["runtime-tokio", "rustls"] }
 rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
-rsa = { version = "0.9.2", default-features = false, features = ["sha2"] }
-rustls = { version = "0.23.0", default-features = false }
+rsa = { version = "0.9.6", default-features = false, features = ["sha2"] }
+rustls = { version = "0.23.13", default-features = false }
 sec1 = { version = "0.7.3", default-features = false, features = ["pkcs8", "pem"] }
-sha2 = { version = "0.10.7", default-features = false }
-signature = { version = "2.1.0", default-features = false }
-webpki = { package = "rustls-webpki", version = "0.102.0", default-features = false }
+sha2 = { version = "0.10.8", default-features = false }
+signature = { version = "2.2.0", default-features = false }
+webpki = { package = "rustls-webpki", version = "0.102.8", default-features = false }
 x25519-dalek = { version = "2", default-features = false }
 
 [dev-dependencies]
 getrandom = { version = "0.2", features = ["custom"] } # workaround to build on no_std targets
+rcgen = "0.13.1"
+socket2 = "0.5.7"
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "net"] }
 
 [features]
 default = ["std", "tls12", "zeroize"]
@@ -57,3 +62,6 @@ std = ["alloc", "webpki/std", "pki-types/std", "rustls/std", "ed25519-dalek/std"
 # TODO: go through all of these to ensure to_vec etc. impls are exposed
 alloc = ["webpki/alloc", "pki-types/alloc", "aead/alloc", "ed25519-dalek/alloc"]
 zeroize = ["ed25519-dalek/zeroize", "x25519-dalek/zeroize"]
+
+# [patch.crates-io]
+# quinn = { path = "F:\\Git\\github.com\\quinn-rs\\quinn\\quinn" }
